--- a/css/my_website.css
+++ b/css/my_website.css
@@ -32,14 +32,18 @@
         box-shadow: 0px 4px 4px rgba(13, 96, 111, 0.5);
         max-width: 1440px;
         height: 90px;
+    }
+    
+    header .wrap {
         display: flex;
         align-items: center;
+        justify-content: space-between;
+        height: 100%;
     }
     
     .logo {
         display: flex;
         align-items: center;
-        margin-left: 8.2%;
     }
     
     .logo__img {}
@@ -55,9 +59,7 @@
         flex: 1 0 185px;
     }
     
-    .menu {
-        margin: 0 0 0 12.1%;
-    }
+    .menu {}
     
     .menu__row {
         display: flex;
@@ -75,7 +77,8 @@
         content: "";
         height: 4px;
         width: 0;
-        background-color:#0D606F; ;
+        background-color: #0D606F;
+        ;
         transition: width 0.2s linear;
         border-radius: 10px;
         opacity: 0.4;
@@ -87,20 +90,19 @@
         width: 110px;
         transition: all 0.2s;
         top: 60px;
-      
         position: absolute;
     }
     
     .menu__row li:nth-child(1) {
-        margin-right: 7.4%;
+        margin: 0 7.1% 0 14%;
     }
     
     .menu__row li:nth-child(2) {
-        margin-right: 9%;
+        margin-right: 9.1%;
     }
     
     .menu__row li:nth-child(3) {
-        margin-right: 6%;
+        margin-right: 6.6%;
     }
     
     .menu__link {
@@ -165,12 +167,12 @@
     
     .preview__text {
         font-family: 'Aleo';
-        font-weight: 400;
+        font-style: italic;
+        font-weight: 700;
         font-size: 20px;
         line-height: 24px;
         color: #ffffff;
         margin-top: 2.6%;
-        letter-spacing: -0.1px;
     }
     
     .preview__row {
@@ -292,7 +294,8 @@
         margin: 0 -21px 0 -8px;
     }
     /*  */
-     .destinations__textBtn  {
+    
+    .destinations__textBtn {
         margin: 0 19px 0 0;
         font-family: 'Red Hat Text';
         font-style: normal;
@@ -301,6 +304,7 @@
         line-height: 32px;
         color: #FFFFFF;
     }
+    
     .storis__textBtn {
         font-family: 'Red Hat Text';
         font-style: normal;
@@ -309,6 +313,7 @@
         line-height: 32px;
         color: #FFFFFF;
     }
+    
     .steps {
         margin-top: 23.1%;
     }
@@ -464,10 +469,15 @@
         color: #0D606F;
         margin-top: 3% 0 0 0;
     }
-    .storis__link:hover{
-        
+    
+    .storis__link {
+        font-weight: bold;
+    }
+    
+    .storis__link:hover {
         color: #0c09b3;
     }
+    
     .storis__text p a {
         color: #0D606F;
     }
@@ -480,7 +490,7 @@
     .storis__btn button img {
         margin: 0 -21px 0 -8px;
     }
-   
+    
     .storis__textBtn {
         margin: 0 19px 0 0;
     }
@@ -500,9 +510,13 @@
     }
     
     footer {
-        display: flex;
         align-items: center;
         margin-top: 3%;
+    }
+    
+    footer .wrap {
+        display: flex;
+        align-items: center;
     }
     
     .footer__row {
@@ -511,22 +525,31 @@
         padding: 0;
         margin: 0;
     }
+    
     .footer__row li:hover {
         background-color: #04363f;
         border-radius: 5px;
-        
         transition: all 0.4s;
     }
-    .footer__row li:nth-child(1)
-     {
-        margin: 2% 5% 0 0;
+    
+    .footer__row li {
+        background-color: rgba(13, 96, 111, 0.08);
     }
-    .footer__row li:nth-child(2) { margin: -3px 0 0 0;} 
-
-    .footer__row li:nth-child(3) { margin-top: 4px;} 
-   
+    
+    .footer__row li:nth-child(1) {
+        margin: 4% 10px 0 31%;
+    }
+    
+    .footer__row li:nth-child(2) {
+        margin: 1px 0 0 0;
+    }
+    
+    .footer__row li:nth-child(3) {
+        margin-top: 1px;
+    }
+    
     .footer__text {
-        margin-left: 40.9%;
+        margin-left: 39%;
         margin-right: 22%;
         text-decoration: none;
         font-family: 'Red Hat Text';
@@ -575,7 +598,7 @@
     }
     
     a:hover {
-        color:#0D606F;
+        color: #0D606F;
         transition: all .3s;
     }
     
@@ -586,7 +609,6 @@
     }
     
     button:hover {
-       
         transition: all .3s;
         box-shadow: 0px 5px 5px rgba(13, 96, 111, 0.8);
     }
